# Markdown

./: .flake8  .gitignore  README.md  example.md  pyproject.toml  setup.py
.github/workflows/: flake8.yaml  python-tests.yaml  tests.yaml  traceability.yaml
doc/: devel.md
doc/arc42/: example.md  readme.md  requirements.yaml
doc/developer/: devel.md
examples/: .gitignore  example.py
markdown_generator/: __init__.py  chapter.py  code_block.py  document.py  interfaces.py  lists.py  markdown_formatter.py  table.py  table_of_content.py  text_block.py
src/examples/: example.py
src/markdown/: __init__.py  chapter.py  code_block.py  document.py  formatter.py  interfaces.py  lists.py  markdown_formatter.py  table.py  table_of_content.py  text_block.py
tests/: conftest.py  evaluate_traceability.py  test_chapter.py  test_code_block.py  test_document.py  test_formatter.py  test_lists.py  test_markdown_formatter.py  test_table.py  test_text_block.py  test_toc.py  text_block.py  utils.py
